[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Markus Gierlinger <markus.gierlinger@dynatrace.com>"]

[tool.poetry.scripts]
start = "backend.main:start"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
